--- a/index.html
+++ b/index.html
@@ -2,10 +2,230 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>配置列表</title>
+    <meta charset="utf-8"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/codemirror.css">
+    <link rel="stylesheet" href="./css/dracula.css">
+    <link rel="stylesheet" href="./fold/foldgutter.css"/>
+
+    <link rel="stylesheet" href="./css/dataTables.bootstrap.min.css">
+
+    <link rel="stylesheet" href="./css/custom.css">
+    <script src="./js/codemirror.js"></script>
+    <script src="./fold/foldcode.js"></script>
+    <script src="./fold/foldgutter.js"></script>
+    <script src="./fold/brace-fold.js"></script>
+    <script src="./fold/comment-fold.js"></script>
+    <script src="./js/yaml.js"></script>
+
+
+    <style>
+        .CodeMirror-linenumber{
+        display: none;
+        }
+        .CodeMirror-gutters{
+            display: none;
+        }
+    </style>
 </head>
-<body>
-    <h2>hello world</h2>
+<body class="hold-transition skin-blue sidebar-mini" style='overflow:scroll;overflow-x:hidden' >
+<div class="wrapper">
+    <!-- Content Wrapper. Contains page content -->
+    <div class="content-wrapper">
+        <!-- Content Header (Page header) -->
+        <!--<section class="content-header">-->
+            <!--<h1>列表</h1>-->
+        <!--</section>-->
+
+        <!-- Main content -->
+        <section class="content">
+
+            <div class="row">
+
+                <div class="col-xs-2" style="float: right">
+                    <button class="btn  btn-success add" type="button" style="width: 50%">添加</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="box">
+                        <div class="box-body" >
+                            <table id="dict_list" class="table table-bordered table-striped" width="100%" >
+                                <thead>
+                                <tr>
+                                    <th >序号</th>
+                                    <th name="name" >名称</th>
+                                    <th name="appGroup" >所属应用组</th>
+                                    <th name="remark" >描述</th>
+                                    <th name="data">yaml配置</th>
+                                    <th>操作</th>
+                                </tr>
+                                </thead>
+                                <tbody></tbody>
+                                <tfoot></tfoot>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
+
+</div>
+
+<!-- 新增.模态框 -->
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" >添加</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal form" role="form" >
+
+                    <div class="form-group">
+                        <label for="addName" class="col-sm-2 control-label">名称<font color="red">*</font></label>
+                        <div class="col-sm-10"><input type="text" maxlength="32" class="form-control" id="addName" name="name" placeholder="请输入名称" ></div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="addGroup" class="col-sm-2 control-label">所属应用组<font color="red">*</font></label>
+                        <div class="col-sm-10"><input type="text" maxlength="32" class="form-control" id="addGroup" name="appGroup" placeholder="请输入所属组" ></div>
+
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="addDesc" class="col-sm-2 control-label">描述<font color="red">*</font></label>
+                        <div class="col-sm-10">
+                            <textarea name="remark"class="form-control"  maxlength="128" id="addDesc" style="width: 100%" cols="30" rows="2"></textarea>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label for="add_yaml" class="col-sm-2 control-label">yaml配置<font color="red">*</font></label>
+                        <div class="col-sm-10">
+                               <textarea id="add_yaml" name="data">
+                            </textarea>
+                        </div>
+
+                    </div>
+
+                    <hr>
+                    <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-6">
+                            <button type="submit" class="btn btn-primary"  >保存</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 更新.模态框 -->
+<div class="modal fade" id="updateModal" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" >更新</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal form" role="form" >
+                    <input type="hidden" name="field_id">
+
+                    <div class="form-group">
+                        <label for="updName" class="col-sm-2 control-label">名称<font color="red">*</font></label>
+                        <div class="col-sm-10"><input type="text" maxlength="32" class="form-control" id="updName" name="name" placeholder="请输入名称" ></div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="updGroup" class="col-sm-2 control-label">所属应用组<font color="red">*</font></label>
+                        <div class="col-sm-10"><input type="text" maxlength="32" class="form-control" id="updGroup" name="appGroup" placeholder="请输入所属组" ></div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="updDesc" class="col-sm-2 control-label">描述<font color="red">*</font></label>
+                        <div class="col-sm-10"><textarea class="form-control" name="remark"  maxlength="128" id="updDesc"   style="width: 100%" cols="30" rows="2"></textarea></div>
+
+                    </div>
+
+                    <div class="form-group">
+                        <label for="upd_yaml" class="col-sm-2 control-label">yaml配置<font color="red">*</font></label>
+                        <div class="col-sm-10">
+                               <textarea id="upd_yaml" name="data">
+                            </textarea>
+                        </div>
+
+                    </div>
+
+
+
+                    <hr>
+                    <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-6">
+                            <button type="submit" class="btn btn-primary"  >保存</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        </div>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- DataTables -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+<script src="./js/layer/layer.js"></script>
+<script src="./js/jquery/jquery.validate.min.js"></script>
+<script src="./js/jquery/jquery.cookie.js"></script>
+<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+
+<script src="./js/jquery.dataTables.min.js"></script>
+<script src="./js/dataTables.bootstrap.min.js"></script>
+<script src="./js/index.js"></script>
+
+<script>
+    var editor_add = CodeMirror.fromTextArea(document.getElementById("add_yaml"), {
+        mode: "text/yaml", //实现yaml代码高亮
+        lineNumbers: true,	//显示行号
+        theme: "dracula",	//设置主题
+        lineWrapping: true,	//代码折叠
+        foldGutter: true,
+        gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
+        matchBrackets: true,	//括号匹配
+        //readOnly: true, //只读
+
+    });
+
+    editor_add.setSize('100%','300px')
+
+    var editor_upd = CodeMirror.fromTextArea(document.getElementById("upd_yaml"), {
+        mode: "text/yaml", //实现yaml代码高亮
+        lineNumbers: true,	//显示行号
+        theme: "dracula",	//设置主题
+        lineWrapping: true,	//代码折叠
+        foldGutter: true,
+        gutters: ["CodeMirror-linenumbers", "CodeMirror-foldgutter"],
+        matchBrackets: true,	//括号匹配
+        //readOnly: true, //只读
+
+    });
+
+    editor_upd.setSize('100%','300px')
+</script>
+
 </body>
+
 </html>
